examples/errors/class_static_init_expr/main.lc

class A {

	static B = print("")

}
